# test-gpt-local

./: .env.example  .gitignore  .tmp-section5-full.xml  .tmp-section5-shutdown.xml  .tmp-section5-timeout.xml  AGENTS.md  Phase5_Implementation_Plan.md  QA_Log.md  README.md  iteration-plan.md  iteration_plan.md  package-lock.json  plan-personal-pwsh-proxy.md  pyproject.toml
acceptance/: README.md  section4-live.md  section5-live.md  section6-live.md  test_iteration_plan.py
app/: config.py  server.py  service.py
app/services/: artifact_registry.py  change_set_store.py  conpty.py  envelope.py  event_store.py  logging_config.py  path_guard.py  process_manager.py  process_recovery.py  process_resources.py  process_scheduler.py  service_state.py  subprocess_utils.py  supervisor.py  tool_registry.py  workspace_manager.py  workspace_plan.py
app/storage/: database.py  idempotency.py
app/tools/: artifacts.py  capabilities.py  change_sets.py  checks.py  code_intelligence.py  events.py  (+12 more)
config/: operator.yaml  projects.yaml
misc/: Phase4_Acceptance_Report.md  Phase5_Implementation_Plan.md
old-docs/: Phase5_Acceptance_Report.md  modification_comment.md  plan-personal-pwsh-proxy.md
scripts/: accept-iteration.py  accept-section1.py  accept-section4-live.ps1  claude-hud-apply.cjs  claude-hud-merge-config.cjs  doctor.ps1  install-scheduled-tasks.ps1  install-service.ps1  restart-service.ps1  service-host.ps1  smoke-test.ps1  start-mcp.ps1  start-service.ps1  start-tunnel.ps1  status-service.ps1  stop-all.ps1  stop-service.ps1  uninstall-service.ps1
tests/: conftest.py
(+43 files in other folders)
