[project]
name = "gpt-local-code-operator"
version = "0.1.0"
description = "Local MCP Server for GPT-powered code operations"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0",
    "aiofile>=3.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
exclude = [".claude", "output", "data", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
